--- a/M1U2/index.html
+++ b/M1U2/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>CV Florencia Carranza</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
            <li>The office</li>
        </ul>
 
-    <h4>¿Que pelis son las que mas me gustaron</h4>
+    <h4>¿Que pelis son las que mas me gustaron?</h4>
 
       <ul>
           <li>Clueless</li>
